# pytorch-exercises

./: .gitignore  Makefile  README.md  pyproject.toml
app/: common.py  config.py
data/got/: GOT.txt
data/sarcasm_detection/: labels.txt
scripts/: train_rnn.py
training_scripts/: rnn_classifier.py  rnn_lm.py  train_cbow.py
utils/: helpers.py
