[tool.poetry]
name = "pytorch-exercises"
version = "0.1.0"
description = ""
authors = ["Hrithick Sen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
numpy = "^2.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
loguru = "^0.7.2"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
